--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-   "author": "Alexander Shutov",
+   "author": "Armaan/Andreas",
    "background": {
       "page": "background/index.html",
       "persistent": true
